--- a/scss/scss/_variables.scss
+++ b/scss/scss/_variables.scss
@@ -58,3 +58,12 @@ $disableLi_navebar:darkslategray;
 $backgroundActive_navbar:#084f61;
 $colorA_navbar:white;
 $hoverA_navbar:#e4edff ;
+$disableA:darkslategray;
+$activeA:#084f61;
+
+/**
+*La grille
+ */
+$gutter: 2 !default; ;
+$gridColumns: 12 !default;
+$nbColumn:12 !default ;
