--- a/projet/framework.css
+++ b/projet/framework.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 *_typographie.scss
 */
@@ -10,7 +9,7 @@ p {
 */
 h1 h2 h3 h4 h5 h6 {
   font-family: "Helvetica", sans-serif;
-  color: black ┬ºdefault;
+  color: black;
   margin-top: 0; }
 
 hr {
@@ -94,43 +93,48 @@ abbr {
   abbr[title] {
     cursor: help; }
 
-cursor-abbr {
+.cursor-abbr {
   cursor: help; }
 
-a:hover {
-  color: #606c76;
-  text-decoration: none; }
+a {
+  cursor: pointer; }
+  a:hover {
+    color: #606c76;
+    text-decoration: none; }
 
 /*
 * Allignement et transformation de texte
 */
-align-left {
+.align-left {
   text-align: left; }
 
-align-right {
+.align-right {
   text-align: right; }
 
-align-center {
+.align-center {
   text-align: center; }
 
-align-justify {
+.align-justify {
   text-align: justify; }
 
-align-start {
+.align-start {
   text-align: start; }
 
-align-end {
+.align-end {
   text-align: end; }
 
-uppercase-text {
+.uppercase-text {
   text-transform: uppercase; }
 
-lowercase-text {
+.lowercase-text {
   text-transform: lowercase; }
 
 /*
 * Liste
 */
+/**
+    *La description d'une colonne
+     */
 /**
 *Blokcode & quote
 */
@@ -149,11 +153,11 @@ abbr[title] {
 /*
 * Liste
 */
-ulcircle {
+ul.circle {
   list-style: circle; }
-ulnothing {
+ul.nothing {
   list-style: none; }
-ulsquare {
+ul.square {
   list-style: square; }
 
 .table {
@@ -477,16 +481,318 @@ ulsquare {
       background-color: darkslategray; }
     .navbar li.active {
       background-color: #084f61; }
-    .navbar li a {
-      display: block;
-      width: 100%;
-      height: 100%;
-      color: white;
-      text-decoration: none; }
-      .navbar li a:hover {
-        background-color: #e4edff;
-        color: black; }
-      .navbar li a.disable {
-        cursor: not-allowed; }
+  .navbar a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: white;
+    text-decoration: none; }
+    .navbar a:hover {
+      background-color: #e4edf;
+      color: black; }
+    .navbar a.disable {
+      cursor: not-allowed;
+      background-color: #e4edff; }
+    .navbar a.active {
+      background-color: darkslategray; }
+
+/**
+*la grille
+ */
+.container {
+  width: 76%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 2% auto;
+  background-color: #d9e6f2; }
+
+.col-1 {
+  width: 6.3333333333%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-1 .offset-1 {
+    margin-left: calc(100% * 1 / 1 * 1 + 2); }
+
+.col-2 {
+  width: 14.6666666667%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-2 .offset-1 {
+    margin-left: calc(100% * 1 / 2 * 1 + 2); }
+  .col-2 .offset-2 {
+    margin-left: calc(100% * 1 / 2 * 2 + 2); }
+
+.col-3 {
+  width: 23%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-3 .offset-1 {
+    margin-left: calc(100% * 1 / 3 * 1 + 2); }
+  .col-3 .offset-2 {
+    margin-left: calc(100% * 1 / 3 * 2 + 2); }
+  .col-3 .offset-3 {
+    margin-left: calc(100% * 1 / 3 * 3 + 2); }
+
+.col-4 {
+  width: 31.3333333333%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-4 .offset-1 {
+    margin-left: calc(100% * 1 / 4 * 1 + 2); }
+  .col-4 .offset-2 {
+    margin-left: calc(100% * 1 / 4 * 2 + 2); }
+  .col-4 .offset-3 {
+    margin-left: calc(100% * 1 / 4 * 3 + 2); }
+  .col-4 .offset-4 {
+    margin-left: calc(100% * 1 / 4 * 4 + 2); }
+
+.col-5 {
+  width: 39.6666666667%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-5 .offset-1 {
+    margin-left: calc(100% * 1 / 5 * 1 + 2); }
+  .col-5 .offset-2 {
+    margin-left: calc(100% * 1 / 5 * 2 + 2); }
+  .col-5 .offset-3 {
+    margin-left: calc(100% * 1 / 5 * 3 + 2); }
+  .col-5 .offset-4 {
+    margin-left: calc(100% * 1 / 5 * 4 + 2); }
+  .col-5 .offset-5 {
+    margin-left: calc(100% * 1 / 5 * 5 + 2); }
+
+.col-6 {
+  width: 48%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-6 .offset-1 {
+    margin-left: calc(100% * 1 / 6 * 1 + 2); }
+  .col-6 .offset-2 {
+    margin-left: calc(100% * 1 / 6 * 2 + 2); }
+  .col-6 .offset-3 {
+    margin-left: calc(100% * 1 / 6 * 3 + 2); }
+  .col-6 .offset-4 {
+    margin-left: calc(100% * 1 / 6 * 4 + 2); }
+  .col-6 .offset-5 {
+    margin-left: calc(100% * 1 / 6 * 5 + 2); }
+  .col-6 .offset-6 {
+    margin-left: calc(100% * 1 / 6 * 6 + 2); }
+
+.col-7 {
+  width: 56.3333333333%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-7 .offset-1 {
+    margin-left: calc(100% * 1 / 7 * 1 + 2); }
+  .col-7 .offset-2 {
+    margin-left: calc(100% * 1 / 7 * 2 + 2); }
+  .col-7 .offset-3 {
+    margin-left: calc(100% * 1 / 7 * 3 + 2); }
+  .col-7 .offset-4 {
+    margin-left: calc(100% * 1 / 7 * 4 + 2); }
+  .col-7 .offset-5 {
+    margin-left: calc(100% * 1 / 7 * 5 + 2); }
+  .col-7 .offset-6 {
+    margin-left: calc(100% * 1 / 7 * 6 + 2); }
+  .col-7 .offset-7 {
+    margin-left: calc(100% * 1 / 7 * 7 + 2); }
+
+.col-8 {
+  width: 64.6666666667%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-8 .offset-1 {
+    margin-left: calc(100% * 1 / 8 * 1 + 2); }
+  .col-8 .offset-2 {
+    margin-left: calc(100% * 1 / 8 * 2 + 2); }
+  .col-8 .offset-3 {
+    margin-left: calc(100% * 1 / 8 * 3 + 2); }
+  .col-8 .offset-4 {
+    margin-left: calc(100% * 1 / 8 * 4 + 2); }
+  .col-8 .offset-5 {
+    margin-left: calc(100% * 1 / 8 * 5 + 2); }
+  .col-8 .offset-6 {
+    margin-left: calc(100% * 1 / 8 * 6 + 2); }
+  .col-8 .offset-7 {
+    margin-left: calc(100% * 1 / 8 * 7 + 2); }
+  .col-8 .offset-8 {
+    margin-left: calc(100% * 1 / 8 * 8 + 2); }
+
+.col-9 {
+  width: 73%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-9 .offset-1 {
+    margin-left: calc(100% * 1 / 9 * 1 + 2); }
+  .col-9 .offset-2 {
+    margin-left: calc(100% * 1 / 9 * 2 + 2); }
+  .col-9 .offset-3 {
+    margin-left: calc(100% * 1 / 9 * 3 + 2); }
+  .col-9 .offset-4 {
+    margin-left: calc(100% * 1 / 9 * 4 + 2); }
+  .col-9 .offset-5 {
+    margin-left: calc(100% * 1 / 9 * 5 + 2); }
+  .col-9 .offset-6 {
+    margin-left: calc(100% * 1 / 9 * 6 + 2); }
+  .col-9 .offset-7 {
+    margin-left: calc(100% * 1 / 9 * 7 + 2); }
+  .col-9 .offset-8 {
+    margin-left: calc(100% * 1 / 9 * 8 + 2); }
+  .col-9 .offset-9 {
+    margin-left: calc(100% * 1 / 9 * 9 + 2); }
+
+.col-10 {
+  width: 81.3333333333%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-10 .offset-1 {
+    margin-left: calc(100% * 1 / 10 * 1 + 2); }
+  .col-10 .offset-2 {
+    margin-left: calc(100% * 1 / 10 * 2 + 2); }
+  .col-10 .offset-3 {
+    margin-left: calc(100% * 1 / 10 * 3 + 2); }
+  .col-10 .offset-4 {
+    margin-left: calc(100% * 1 / 10 * 4 + 2); }
+  .col-10 .offset-5 {
+    margin-left: calc(100% * 1 / 10 * 5 + 2); }
+  .col-10 .offset-6 {
+    margin-left: calc(100% * 1 / 10 * 6 + 2); }
+  .col-10 .offset-7 {
+    margin-left: calc(100% * 1 / 10 * 7 + 2); }
+  .col-10 .offset-8 {
+    margin-left: calc(100% * 1 / 10 * 8 + 2); }
+  .col-10 .offset-9 {
+    margin-left: calc(100% * 1 / 10 * 9 + 2); }
+  .col-10 .offset-10 {
+    margin-left: calc(100% * 1 / 10 * 10 + 2); }
+
+.col-11 {
+  width: 89.6666666667%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-11 .offset-1 {
+    margin-left: calc(100% * 1 / 11 * 1 + 2); }
+  .col-11 .offset-2 {
+    margin-left: calc(100% * 1 / 11 * 2 + 2); }
+  .col-11 .offset-3 {
+    margin-left: calc(100% * 1 / 11 * 3 + 2); }
+  .col-11 .offset-4 {
+    margin-left: calc(100% * 1 / 11 * 4 + 2); }
+  .col-11 .offset-5 {
+    margin-left: calc(100% * 1 / 11 * 5 + 2); }
+  .col-11 .offset-6 {
+    margin-left: calc(100% * 1 / 11 * 6 + 2); }
+  .col-11 .offset-7 {
+    margin-left: calc(100% * 1 / 11 * 7 + 2); }
+  .col-11 .offset-8 {
+    margin-left: calc(100% * 1 / 11 * 8 + 2); }
+  .col-11 .offset-9 {
+    margin-left: calc(100% * 1 / 11 * 9 + 2); }
+  .col-11 .offset-10 {
+    margin-left: calc(100% * 1 / 11 * 10 + 2); }
+  .col-11 .offset-11 {
+    margin-left: calc(100% * 1 / 11 * 11 + 2); }
+
+.col-12 {
+  width: 98%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  background-color: #b3cce6; }
+  .col-12 .offset-1 {
+    margin-left: calc(100% * 1 / 12 * 1 + 2); }
+  .col-12 .offset-2 {
+    margin-left: calc(100% * 1 / 12 * 2 + 2); }
+  .col-12 .offset-3 {
+    margin-left: calc(100% * 1 / 12 * 3 + 2); }
+  .col-12 .offset-4 {
+    margin-left: calc(100% * 1 / 12 * 4 + 2); }
+  .col-12 .offset-5 {
+    margin-left: calc(100% * 1 / 12 * 5 + 2); }
+  .col-12 .offset-6 {
+    margin-left: calc(100% * 1 / 12 * 6 + 2); }
+  .col-12 .offset-7 {
+    margin-left: calc(100% * 1 / 12 * 7 + 2); }
+  .col-12 .offset-8 {
+    margin-left: calc(100% * 1 / 12 * 8 + 2); }
+  .col-12 .offset-9 {
+    margin-left: calc(100% * 1 / 12 * 9 + 2); }
+  .col-12 .offset-10 {
+    margin-left: calc(100% * 1 / 12 * 10 + 2); }
+  .col-12 .offset-11 {
+    margin-left: calc(100% * 1 / 12 * 11 + 2); }
+  .col-12 .offset-12 {
+    margin-left: calc(100% * 1 / 12 * 12 + 2); }
 
 /*# sourceMappingURL=framework.css.map */
