--- a/projet/framework.css
+++ b/projet/framework.css
@@ -135,6 +135,9 @@ a {
 /**
     *La description d'une colonne
      */
+/*
+* repris de la source http://designerdada.com/multi-step-signup-form-using-jquery-css3/
+ */
 /**
 *Blokcode & quote
 */
@@ -517,8 +520,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-1 .offset-1 {
-    margin-left: calc(100% * 1 / 1 * 1 + 2); }
 
 .col-2 {
   width: 14.6666666667%;
@@ -530,10 +531,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-2 .offset-1 {
-    margin-left: calc(100% * 1 / 2 * 1 + 2); }
-  .col-2 .offset-2 {
-    margin-left: calc(100% * 1 / 2 * 2 + 2); }
 
 .col-3 {
   width: 23%;
@@ -545,12 +542,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-3 .offset-1 {
-    margin-left: calc(100% * 1 / 3 * 1 + 2); }
-  .col-3 .offset-2 {
-    margin-left: calc(100% * 1 / 3 * 2 + 2); }
-  .col-3 .offset-3 {
-    margin-left: calc(100% * 1 / 3 * 3 + 2); }
 
 .col-4 {
   width: 31.3333333333%;
@@ -562,14 +553,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-4 .offset-1 {
-    margin-left: calc(100% * 1 / 4 * 1 + 2); }
-  .col-4 .offset-2 {
-    margin-left: calc(100% * 1 / 4 * 2 + 2); }
-  .col-4 .offset-3 {
-    margin-left: calc(100% * 1 / 4 * 3 + 2); }
-  .col-4 .offset-4 {
-    margin-left: calc(100% * 1 / 4 * 4 + 2); }
 
 .col-5 {
   width: 39.6666666667%;
@@ -581,16 +564,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-5 .offset-1 {
-    margin-left: calc(100% * 1 / 5 * 1 + 2); }
-  .col-5 .offset-2 {
-    margin-left: calc(100% * 1 / 5 * 2 + 2); }
-  .col-5 .offset-3 {
-    margin-left: calc(100% * 1 / 5 * 3 + 2); }
-  .col-5 .offset-4 {
-    margin-left: calc(100% * 1 / 5 * 4 + 2); }
-  .col-5 .offset-5 {
-    margin-left: calc(100% * 1 / 5 * 5 + 2); }
 
 .col-6 {
   width: 48%;
@@ -602,18 +575,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-6 .offset-1 {
-    margin-left: calc(100% * 1 / 6 * 1 + 2); }
-  .col-6 .offset-2 {
-    margin-left: calc(100% * 1 / 6 * 2 + 2); }
-  .col-6 .offset-3 {
-    margin-left: calc(100% * 1 / 6 * 3 + 2); }
-  .col-6 .offset-4 {
-    margin-left: calc(100% * 1 / 6 * 4 + 2); }
-  .col-6 .offset-5 {
-    margin-left: calc(100% * 1 / 6 * 5 + 2); }
-  .col-6 .offset-6 {
-    margin-left: calc(100% * 1 / 6 * 6 + 2); }
 
 .col-7 {
   width: 56.3333333333%;
@@ -625,20 +586,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-7 .offset-1 {
-    margin-left: calc(100% * 1 / 7 * 1 + 2); }
-  .col-7 .offset-2 {
-    margin-left: calc(100% * 1 / 7 * 2 + 2); }
-  .col-7 .offset-3 {
-    margin-left: calc(100% * 1 / 7 * 3 + 2); }
-  .col-7 .offset-4 {
-    margin-left: calc(100% * 1 / 7 * 4 + 2); }
-  .col-7 .offset-5 {
-    margin-left: calc(100% * 1 / 7 * 5 + 2); }
-  .col-7 .offset-6 {
-    margin-left: calc(100% * 1 / 7 * 6 + 2); }
-  .col-7 .offset-7 {
-    margin-left: calc(100% * 1 / 7 * 7 + 2); }
 
 .col-8 {
   width: 64.6666666667%;
@@ -650,22 +597,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-8 .offset-1 {
-    margin-left: calc(100% * 1 / 8 * 1 + 2); }
-  .col-8 .offset-2 {
-    margin-left: calc(100% * 1 / 8 * 2 + 2); }
-  .col-8 .offset-3 {
-    margin-left: calc(100% * 1 / 8 * 3 + 2); }
-  .col-8 .offset-4 {
-    margin-left: calc(100% * 1 / 8 * 4 + 2); }
-  .col-8 .offset-5 {
-    margin-left: calc(100% * 1 / 8 * 5 + 2); }
-  .col-8 .offset-6 {
-    margin-left: calc(100% * 1 / 8 * 6 + 2); }
-  .col-8 .offset-7 {
-    margin-left: calc(100% * 1 / 8 * 7 + 2); }
-  .col-8 .offset-8 {
-    margin-left: calc(100% * 1 / 8 * 8 + 2); }
 
 .col-9 {
   width: 73%;
@@ -677,24 +608,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-9 .offset-1 {
-    margin-left: calc(100% * 1 / 9 * 1 + 2); }
-  .col-9 .offset-2 {
-    margin-left: calc(100% * 1 / 9 * 2 + 2); }
-  .col-9 .offset-3 {
-    margin-left: calc(100% * 1 / 9 * 3 + 2); }
-  .col-9 .offset-4 {
-    margin-left: calc(100% * 1 / 9 * 4 + 2); }
-  .col-9 .offset-5 {
-    margin-left: calc(100% * 1 / 9 * 5 + 2); }
-  .col-9 .offset-6 {
-    margin-left: calc(100% * 1 / 9 * 6 + 2); }
-  .col-9 .offset-7 {
-    margin-left: calc(100% * 1 / 9 * 7 + 2); }
-  .col-9 .offset-8 {
-    margin-left: calc(100% * 1 / 9 * 8 + 2); }
-  .col-9 .offset-9 {
-    margin-left: calc(100% * 1 / 9 * 9 + 2); }
 
 .col-10 {
   width: 81.3333333333%;
@@ -706,26 +619,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-10 .offset-1 {
-    margin-left: calc(100% * 1 / 10 * 1 + 2); }
-  .col-10 .offset-2 {
-    margin-left: calc(100% * 1 / 10 * 2 + 2); }
-  .col-10 .offset-3 {
-    margin-left: calc(100% * 1 / 10 * 3 + 2); }
-  .col-10 .offset-4 {
-    margin-left: calc(100% * 1 / 10 * 4 + 2); }
-  .col-10 .offset-5 {
-    margin-left: calc(100% * 1 / 10 * 5 + 2); }
-  .col-10 .offset-6 {
-    margin-left: calc(100% * 1 / 10 * 6 + 2); }
-  .col-10 .offset-7 {
-    margin-left: calc(100% * 1 / 10 * 7 + 2); }
-  .col-10 .offset-8 {
-    margin-left: calc(100% * 1 / 10 * 8 + 2); }
-  .col-10 .offset-9 {
-    margin-left: calc(100% * 1 / 10 * 9 + 2); }
-  .col-10 .offset-10 {
-    margin-left: calc(100% * 1 / 10 * 10 + 2); }
 
 .col-11 {
   width: 89.6666666667%;
@@ -737,28 +630,6 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-11 .offset-1 {
-    margin-left: calc(100% * 1 / 11 * 1 + 2); }
-  .col-11 .offset-2 {
-    margin-left: calc(100% * 1 / 11 * 2 + 2); }
-  .col-11 .offset-3 {
-    margin-left: calc(100% * 1 / 11 * 3 + 2); }
-  .col-11 .offset-4 {
-    margin-left: calc(100% * 1 / 11 * 4 + 2); }
-  .col-11 .offset-5 {
-    margin-left: calc(100% * 1 / 11 * 5 + 2); }
-  .col-11 .offset-6 {
-    margin-left: calc(100% * 1 / 11 * 6 + 2); }
-  .col-11 .offset-7 {
-    margin-left: calc(100% * 1 / 11 * 7 + 2); }
-  .col-11 .offset-8 {
-    margin-left: calc(100% * 1 / 11 * 8 + 2); }
-  .col-11 .offset-9 {
-    margin-left: calc(100% * 1 / 11 * 9 + 2); }
-  .col-11 .offset-10 {
-    margin-left: calc(100% * 1 / 11 * 10 + 2); }
-  .col-11 .offset-11 {
-    margin-left: calc(100% * 1 / 11 * 11 + 2); }
 
 .col-12 {
   width: 98%;
@@ -770,29 +641,109 @@ ul.square {
   margin-bottom: 2%;
   margin-top: 2%;
   background-color: #b3cce6; }
-  .col-12 .offset-1 {
-    margin-left: calc(100% * 1 / 12 * 1 + 2); }
-  .col-12 .offset-2 {
-    margin-left: calc(100% * 1 / 12 * 2 + 2); }
-  .col-12 .offset-3 {
-    margin-left: calc(100% * 1 / 12 * 3 + 2); }
-  .col-12 .offset-4 {
-    margin-left: calc(100% * 1 / 12 * 4 + 2); }
-  .col-12 .offset-5 {
-    margin-left: calc(100% * 1 / 12 * 5 + 2); }
-  .col-12 .offset-6 {
-    margin-left: calc(100% * 1 / 12 * 6 + 2); }
-  .col-12 .offset-7 {
-    margin-left: calc(100% * 1 / 12 * 7 + 2); }
-  .col-12 .offset-8 {
-    margin-left: calc(100% * 1 / 12 * 8 + 2); }
-  .col-12 .offset-9 {
-    margin-left: calc(100% * 1 / 12 * 9 + 2); }
-  .col-12 .offset-10 {
-    margin-left: calc(100% * 1 / 12 * 10 + 2); }
-  .col-12 .offset-11 {
-    margin-left: calc(100% * 1 / 12 * 11 + 2); }
-  .col-12 .offset-12 {
-    margin-left: calc(100% * 1 / 12 * 12 + 2); }
+
+.offset-1 {
+  margin-left: 8.3333333333%; }
+
+.offset-2 {
+  margin-left: 16.6666666667%; }
+
+.offset-3 {
+  margin-left: 25%; }
+
+.offset-4 {
+  margin-left: 33.3333333333%; }
+
+.offset-5 {
+  margin-left: 41.6666666667%; }
+
+.offset-6 {
+  margin-left: 50%; }
+
+.offset-7 {
+  margin-left: 58.3333333333%; }
+
+.offset-8 {
+  margin-left: 66.6666666667%; }
+
+.offset-9 {
+  margin-left: 75%; }
+
+.offset-10 {
+  margin-left: 83.3333333333%; }
+
+.offset-11 {
+  margin-left: 91.6666666667%; }
+
+.offset-12 {
+  margin-left: 100%; }
+
+/*
+* La pagination
+*/
+.pagination {
+  display: inline-block;
+  width: 100%; }
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 2% 2%;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #d9e6f2;
+    font-size: 15px; }
+    .pagination a.active {
+      background-color: #b3cce6;
+      color: white;
+      border: 1px solid #4CAF50; }
+    .pagination a:hover:not(.active) {
+      background-color: #d9e6f2; }
+
+/*
+* Le fil d'ariane
+ */
+.filAriane {
+  overflow: hidden;
+  counter-reset: step; }
+  .filAriane li {
+    text-align: center;
+    list-style-type: none;
+    color: #8b9ab0;
+    text-transform: uppercase;
+    font-size: 11px;
+    width: 25%;
+    float: left;
+    position: relative;
+    transition: all 1s; }
+    .filAriane li.active {
+      color: #b3cce6; }
+      .filAriane li.active:after {
+        background: #d9e6f2;
+        color: white; }
+      .filAriane li.active:before {
+        background: #d9e6f2;
+        color: white; }
+    .filAriane li:before {
+      content: counter(step);
+      counter-increment: step;
+      width: 20px;
+      line-height: 20px;
+      display: block;
+      font-size: 10px;
+      color: #333;
+      background: white;
+      border-radius: 3em;
+      margin: 0 auto 5px auto; }
+    .filAriane li:after {
+      content: '';
+      width: 100%;
+      height: 2px;
+      background: white;
+      position: absolute;
+      left: -50%;
+      top: 9px;
+      z-index: -1; }
+    .filAriane li li:first-child:after {
+      content: none; }
 
 /*# sourceMappingURL=framework.css.map */
